--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,211 +1,10 @@
-/** Variables **/
-$crimson: 'Crimson Text', serif;
-$neuton: 'Coda', cursive;
+/** Main Sass File **/
 
 
-/** Colors **/
-
-$orange: #CC6600;
-$grey: #333;
-
-
-/** Styles **/
-
-body {
-	max-width: 700px;
-	margin: 0 auto;
-}
-
-img {
-	max-width: 500px;
-	height: auto;
-}
-
-/** Admin **/
-
-.submitted {
-	display:none;
-}
-
-/** Global **/
-
-a {
-	text-decoration:none;
-	color: $orange;
-	&:hover {
-		color: $grey;
-	}
-}
-
-ul.inline li {
-	padding: 0px 20px 0px 0px;
-}
-
-.pager li {
-	a {
-		font-family: $crimson;
-		text-transform: uppercase;
-	}
-}
-
-p {
-	font-size: 25px;
-	line-height: 37px;
-	font-family: $crimson;
-	color: $grey;
-	&:first-letter {
-		font-size: 40px;
-		font-weight: 700;
-	}
-}
-
-/** Headers **/
-
-header {
-	margin-bottom:30px;
-}
-
-h2 {
-	margin-top: 0px;
-	font-size: 1.3em;
-	line-height: 100%;
-	text-transform: uppercase;
-	font-family: $neuton;
-	color: $orange;
-	#site-slogan {
-	    font-family: $crimson;
-		font-size: 1.0em;
-	    color: $grey;
-	    margin-top: 0px;
-	}
-}
-
-h1 {
-	&#page-title {
-		margin-top: 0px;
-		font-size: 2.6em;
-		line-height: 100%;
-		text-align:center;
-		text-transform: uppercase;
-		font-family: $neuton;
-		color: $orange;
-		clear:both;
-	}
-
-	&#site-name {
-		margin-bottom: 0px;
-		font-family: $crimson;
-		font-weight: 700;
-		font-size: 2.8em;
-		a {
-			color: $grey;
-		}
-
-	}
-}
-
-/** Header Info **/
-
-ul#main-menu {
-	font-family: $crimson;
-	color: $grey;
-	font-size: 0.8em;
-	li {
-
-		padding: 0px 10px 0px 0px;
-		a {
-			color: $grey;
-			&:hover {
-				color: $orange;
-			}
-		}
-	}
-}
-
-#site-info {
-	float: left;
-}
-
-/** LOGO **/
-#logo  {
-	float: right;
-	padding-top: 22px;
-	padding-right: 10px;
-	img {
-		width: 75px;
-		height: 75px;
-		border-radius: 150px;
-		-webkit-border-radius: 150px;
-		-moz-border-radius: 150px;
-		background: url(http://link-to-your/image.jpg) no-repeat;
-		box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-webkit-filter: grayscale(100%);
-		-moz-filter: grayscale(100%);
-		filter: grayscale(100%);
-		&:hover {
-		-webkit-filter: grayscale(0%);
-		-moz-filter: grayscale(0%);
-		filter: grayscale(0%);
-		}
-	}
-}
-
-/** Views **/
-
-.views-field-field-post-tags {
-	font-family: $crimson;
-	float:left;
-	a {
-		color: $orange;
-		&:hover {
-			text-decoration:underline;
-		}
-	}
-}
-
-.content .node {
-	margin-bottom: 50px;
-}
-
-.views-field-field-post-dates  {
-	float:right;
-	font-family: $crimson;
-    color: $orange;
-    clear:both;
-}
-
-.field-name-field-post-dates {
-	color: $orange;
-	margin: 10px 0px 20px 0px;
-}
-
-
-.views-field-title {
-	font-size: 2.6em;
-	text-align:center;
-	text-transform: uppercase;
-	font-family: $neuton;
-	color: $orange;
-	clear:both;
-	a {
-		font-family: $neuton;
-		color: $orange;
-		&:hover {
-			color: $grey;
-		}
-	}
-}
-
-.views-row {
-	margin-bottom: 80px;
-}
-
-.views-view-grid img {
-	border: 2px solid $orange;
-}
-
-/** Import Media **/
-
+@import 'reset';
+@import 'base';
+@import 'layout';
+@import 'theme';
+@import 'content';
 @import 'media';
+
