--- a/css/main.css
+++ b/css/main.css
@@ -47,66 +47,60 @@ table {
 /** Global Styles **/
 /** Colors **/
 /** Fonts **/
-/** Styles **/
-/* line 16, ../sass/_base.scss */
-body {
-  max-width: 700px;
-  margin: 0 auto; }
-
 /** Images **/
-/* line 23, ../sass/_base.scss */
+/* line 16, ../sass/_base.scss */
 img {
   max-width: 500px;
   height: auto; }
 
 /** Links **/
-/* line 31, ../sass/_base.scss */
+/* line 24, ../sass/_base.scss */
 a {
   text-decoration: none;
   color: #cc6600; }
-  /* line 34, ../sass/_base.scss */
+  /* line 27, ../sass/_base.scss */
   a:hover {
     color: #333333; }
 
 /** Paragraphs **/
-/* line 41, ../sass/_base.scss */
+/* line 34, ../sass/_base.scss */
 p {
   font-size: 25px;
   line-height: 37px;
   font-family: "Crimson Text", serif;
   color: #333333; }
-  /* line 46, ../sass/_base.scss */
+  /* line 39, ../sass/_base.scss */
   p:first-letter {
     font-size: 40px;
     font-weight: 700; }
 
 /** Lists **/
-/* line 55, ../sass/_base.scss */
+/* line 48, ../sass/_base.scss */
 ul.inline li {
   padding: 0px 20px 0px 0px; }
 
-/* line 60, ../sass/_base.scss */
+/* line 53, ../sass/_base.scss */
 .pager li a {
   font-family: "Crimson Text", serif;
   text-transform: uppercase; }
 
-/* line 66, ../sass/_base.scss */
+/* line 59, ../sass/_base.scss */
 ul#main-menu {
   font-family: "Crimson Text", serif;
   color: #333333;
   font-size: 0.8em; }
-  /* line 70, ../sass/_base.scss */
+  /* line 63, ../sass/_base.scss */
   ul#main-menu li {
     padding: 0px 10px 0px 0px; }
-    /* line 73, ../sass/_base.scss */
+    /* line 66, ../sass/_base.scss */
     ul#main-menu li a {
       color: #333333; }
-      /* line 75, ../sass/_base.scss */
+      /* line 68, ../sass/_base.scss */
       ul#main-menu li a:hover {
         color: #cc6600; }
 
 /** Header Styles **/
-/* line 84, ../sass/_base.scss */
+/* line 77, ../sass/_base.scss */
 h2 {
   margin-top: 0px;
   font-size: 1.3em;
@@ -114,14 +108,14 @@ h2 {
   text-transform: uppercase;
   font-family: "Coda", cursive;
   color: #cc6600; }
-  /* line 91, ../sass/_base.scss */
+  /* line 84, ../sass/_base.scss */
   h2 #site-slogan {
     font-family: "Crimson Text", serif;
     font-size: 1.0em;
     color: #333333;
     margin-top: 0px; }
 
-/* line 100, ../sass/_base.scss */
+/* line 93, ../sass/_base.scss */
 h1#page-title {
   margin-top: 0px;
   font-size: 2.6em;
@@ -131,32 +125,38 @@ h1#page-title {
   font-family: "Coda", cursive;
   color: #cc6600;
   clear: both; }
-/* line 111, ../sass/_base.scss */
+/* line 104, ../sass/_base.scss */
 h1#site-name {
   margin-bottom: 0px;
   font-family: "Crimson Text", serif;
   font-weight: 700;
   font-size: 2.8em; }
-  /* line 116, ../sass/_base.scss */
+  /* line 109, ../sass/_base.scss */
   h1#site-name a {
     color: #333333; }
 
 /** Layout **/
-/* line 3, ../sass/_layout.scss */
+/* line 4, ../sass/_layout.scss */
+body {
+  max-width: 700px;
+  margin: 0 auto; }
+
+/* line 9, ../sass/_layout.scss */
 header {
   margin-bottom: 30px; }
 
-/* line 7, ../sass/_layout.scss */
+/* line 13, ../sass/_layout.scss */
 #site-info {
-  float: left; }
+  float: left;
+  padding-top: 40px; }
 
 /** LOGO **/
-/* line 12, ../sass/_layout.scss */
+/* line 19, ../sass/_layout.scss */
 #logo {
   float: right;
   padding-top: 22px;
   padding-right: 10px; }
-  /* line 16, ../sass/_layout.scss */
+  /* line 23, ../sass/_layout.scss */
   #logo img {
     width: 75px;
     height: 75px;
@@ -170,7 +170,7 @@ header {
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     filter: grayscale(100%); }
-    /* line 29, ../sass/_layout.scss */
+    /* line 36, ../sass/_layout.scss */
     #logo img:hover {
       -webkit-filter: grayscale(0%);
       -moz-filter: grayscale(0%);
@@ -238,23 +238,24 @@ header {
 
 /** Fonts & Colors **/
 /** Variables **/
+/** Media Queries **/
 @media (min-width: 240px) and (max-width: 500px) and (orientation: portrait) {
-  /* line 7, ../sass/_media.scss */
+  /* line 9, ../sass/_media.scss */
   #site-info {
     float: none;
     text-align: center; }
 
-  /* line 12, ../sass/_media.scss */
+  /* line 14, ../sass/_media.scss */
   #logo {
     float: none;
     padding-left: 22%; }
 
-  /* line 17, ../sass/_media.scss */
+  /* line 19, ../sass/_media.scss */
   #page .content {
     padding-left: 10px;
     padding-right: 10px; } }
 @media (max-width: 700px) and (orientation: landscape) {
-  /* line 26, ../sass/_media.scss */
+  /* line 28, ../sass/_media.scss */
   #page .content, header {
     padding-left: 10px;
     padding-right: 10px; } }
