--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,11 +1,18 @@
 /** Layout **/
 
+
+body {
+	max-width: 700px;
+	margin: 0 auto;
+}
+
 header {
 	margin-bottom:30px;
 }
 
 #site-info {
 	float: left;
+	padding-top: 40px;
 }
 
 /** LOGO **/
