--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -1,4 +1,95 @@
-/** Fonts & Colors **/
+/* Content Styles */
 
+a {
+	text-decoration:none;
+	color: $orange;
+	&:hover {
+		color: $grey;
+	}
+}
 
+ul.inline li {
+	padding: 0px 20px 0px 0px;
+}
 
+.pager li {
+	a {
+		font-family: $crimson;
+		text-transform: uppercase;
+	}
+}
+
+p {
+	font-size: 20px;
+	line-height: 24px;
+	margin-bottom: 10px;
+	font-family: $crimson;
+	color: $grey;
+}
+
+/* Headers */
+
+header {
+	margin-bottom:30px;
+}
+
+h1 {
+	&#page-title {
+		margin-top: 0px;
+		font-size: 2.6em;
+		line-height: 100%;
+		margin-bottom: 25px;
+		text-align:center;
+		text-transform: uppercase;
+		font-family: $neuton;
+		color: $orange;
+		clear:both;
+		text-shadow: 2px 2px 2px #333;
+	}
+
+	&#site-name {
+		margin-bottom: 0px;
+		font-family: $crimson;
+		font-weight: 700;
+		font-size: 2.8em;
+		a {
+			color: $grey;
+		}
+	}
+}
+
+h2 {
+	margin-top: 0px;
+	font-size: 1.3em;
+	line-height: 100%;
+	text-transform: uppercase;
+	font-family: $neuton;
+	color: $orange;
+	#site-slogan {
+	    font-family: $crimson;
+		font-size: 1.0em;
+	    color: $grey;
+	    margin-top: 0px;
+	}
+}
+
+h3 {
+  margin-top: 0px;
+  font-size: 1.5em;
+  line-height: 100%;
+  text-transform: uppercase;
+  font-family: "Lato", sans-serif;
+  color: #333;
+  margin-bottom: 15px;
+  text-decoration: underline;
+}
+
+h4 {
+	color: #fff;
+    font-family: $crimson;
+    margin-bottom: 0px;
+}
+
+#credits p {
+	font-size:15px;
+}
