--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,9 +1,37 @@
-/** Main Sass File **/
+/** Variables **/
+$crimson: 'Crimson Text', serif;
+$neuton: 'Lato', sans-serif;
 
-@import 'reset';
+/** Colors **/
+$orange: #CC6600;
+$grey: #333;
+
+/** Mixins **/
+
+@mixin border-radius($radius) {
+  -webkit-border-radius: $radius;
+     -moz-border-radius: $radius;
+      -ms-border-radius: $radius;
+       -o-border-radius: $radius;
+          border-radius: $radius;
+ }
+ 
+@mixin box-shadow {
+  -moz-box-shadow:    4px 4px 5px #989898;
+  -webkit-box-shadow: 4px 4px 5px #989898;
+  box-shadow:         4px 4px 5px #989898;
+	
+	
+}
+          
+/** Import **/
+
+@import "compass/reset";
 @import 'base';
+@import 'content';
 @import 'layout';
 @import 'theme';
-@import 'content';
 @import 'media';
+
+
 
