--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -1,12 +1,27 @@
-/** Layout **/
+/* Layout */
 
 body {
-	max-width: 700px;
+	max-width: 765px;
 	margin: 0 auto;
+	font-size: 100%;
+	min-height: 800px;
 }
 
-header {
-	margin-bottom:30px;
+/** Header Styles **/
+
+ul#main-menu {
+	font-family: $crimson;
+	color: $grey;
+	font-size: 0.8em;
+	li {
+		padding: 0px 10px 0px 0px;
+		a {
+			color: $grey;
+			&:hover {
+				color: $orange;
+			}
+		}
+	}
 }
 
 #site-info {
@@ -14,28 +29,10 @@ header {
 	padding-top: 40px;
 }
 
-/** LOGO **/
-#logo  {
-	float: right;
-	padding-top: 22px;
-	padding-right: 10px;
-	img {
-		width: 75px;
-		height: 75px;
-		border-radius: 150px;
-		-webkit-border-radius: 150px;
-		-moz-border-radius: 150px;
-		background: url(http://link-to-your/image.jpg) no-repeat;
-		box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-		-webkit-filter: grayscale(100%);
-		-moz-filter: grayscale(100%);
-		filter: grayscale(100%);
-		&:hover {
-		-webkit-filter: grayscale(0%);
-		-moz-filter: grayscale(0%);
-		filter: grayscale(0%);
-		}
-	}
+tr {
+	display:block;
+}
+
+#node-9 p {
+	margin-bottom: 20px;
 }
