--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,69 +1,55 @@
-/** Drupal Theme Styles **/
 
+.target-row {
+	@include box-shadow;
+	float:left;
+	position: relative;
+	cursor: pointer;
+	margin-right: 35px;
+	margin-bottom: 35px;
+	img {
+		max-width: 100%;
+		height: 150px;
+	}
+}
 
-/** Admin **/
+.info-wrap {
+	position: absolute;
+	color: #ccc;
+	bottom: 0px;
+	left: 0px;
+	padding: 10px 0px 10px 0px;
+	width: 100%;
+	font-family: $crimson;
+	background-color: rgba(37,37,37,0.9);
+}
+
+.tt  {
+	text-align:center;
+	font-size:14px;
+	margin-bottom: 5px;
+}
+
+.work {
+	text-align:center;
+	font-size:14px;
+   	a {
+		&:hover {
+			color: $orange;
+			text-decoration:underline;
+		}
+	}
+	p {
+		color: #fff;
+	}
+}
+
+/* Admin Styles */
 
 .submitted {
 	display:none;
 }
 
-/** Views **/
-
-.views-field-field-post-tags {
-	font-family: $crimson;
-	float:left;
-	a {
-		color: $orange;
-		&:hover {
-			text-decoration:underline;
-		}
-	}
+.show {
+	height: 50%;
+	background-color: rgba(37,37,37,0.9)
 }
-
-.views-field-title {
-	font-size: 2.6em;
-	text-align:center;
-	text-transform: uppercase;
-	font-family: $neuton;
-	color: $orange;
-	clear:both;
-	a {
-		font-family: $neuton;
-		color: $orange;
-		&:hover {
-			color: $grey;
-		}
-	}
-}
-
-.views-field-body, .field-name-body {
-	margin-bottom: 10px;
-}
-
-.views-row {
-	margin-bottom: 80px;
-}
-
-.views-view-grid img {
-	border: 2px solid $orange;
-}
-
-/** Content **/
-
-.content .node {
-	margin-bottom: 50px;
-}
-
-/** Modules **/
-
-.views-field-field-post-dates  {
-	float:right;
-	font-family: $crimson;
-    color: $orange;
-}
-
-.field-name-field-post-dates {
-	color: $orange;
-	margin: 10px 0px 20px 0px;
-}
-
